# hive

./: .env.example  .gitignore  CHANGELOG.md  GETTING_STARTED.md  Makefile  README.md  hive.code-workspace  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: package.json  tsconfig.json
apps/api/src/: auth.ts  env.ts  errors.ts  health.ts  index.ts  log.ts  redis.ts  seed-clean.ts  seed-demo.ts  seed.ts
apps/api/src/lib/: artifacts.ts  audit.ts  constant-time.test.ts  constant-time.ts  cors.test.ts  cors.ts  daily-digest.ts  email.ts  envelope.ts  passwords.test.ts  passwords.ts  rate-limit.ts  (+6 more)
apps/dispatcher/: package.json  tsconfig.json
apps/dispatcher/src/: env.ts  index.ts
apps/scheduler/: package.json
apps/scheduler/src/: env.ts  index.ts
apps/session-sweeper/: package.json
apps/session-sweeper/src/: audit-alerts.ts  env.ts  index.ts
apps/ui/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
deploy/aws/: main.tf  production.tfvars  staging.tfvars  variables.tf
deploy/fly/: Dockerfile.migrate  Dockerfile.python-worker  Dockerfile.ts-app  api.fly.toml  deploy-all.sh  deploy-production.sh  dispatcher.fly.toml  fly.migrate.toml  provision.sh  scheduler.fly.toml  secrets-manifest.yaml  session-sweeper.fly.toml  set-secrets.sh  ui.fly.toml  worker-ai-agent.fly.toml  worker-browser.fly.toml  worker-ci-agent.fly.toml  worker-discord.fly.toml  worker-mcp-host.fly.toml  worker-monitor.fly.toml  worker-scraper.fly.toml  worker-task-runner.fly.toml  worker-telegram.fly.toml  worker-trading.fly.toml
deploy/railway/: README.md  RUNBOOK.md  railway.api.json  railway.dispatcher.json  railway.scheduler.json  railway.session-sweeper.json  railway.ui.json  railway.worker-ai-agent.json  railway.worker-browser.json  railway.worker-ci-agent.json  railway.worker-discord.json  railway.worker-mcp-host.json  railway.worker-monitor.json  railway.worker-rpa-desktop.json  railway.worker-scraper.json  railway.worker-task-runner.json  railway.worker-telegram.json  railway.worker-trading.json
docs/: ARCHITECTURE.md  AUTH.md  DEPLOY.md  DEPLOY_AWS.md  DEPLOY_FLY.md  DEPLOY_RAILWAY.md  GO_LIVE_RUNBOOK.md  MCP.md  MONITORING.md  MULTIHOST.md  POOLS.md  PRODUCTION.md  PRODUCTION_CHECKLIST.md  SECRETS.md  TRADING.md
infra/docker/: docker-compose.yml
scripts/: dev-workers.sh  generate-production-secrets.sh  install-git-hooks.sh  install-workers.sh  run-local-workers.sh  smoke-cloud.sh
scripts/git-hooks/: pre-push
workers/ai_agent/: package.json
workers/ai_agent/src/: env.ts  handlers.ts  index.ts  pricing.ts  providers.ts
workers/base/: pyproject.toml
workers/base/hive_base/: __init__.py  crypto.py  db.py  envelope.py  healthz.py  heartbeat.py  joblog.py  kms.py  logging.py  settings.py  worker.py
workers/base/hive_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/browser/: Dockerfile  pyproject.toml
workers/browser/src/: main.py
workers/browser/src/hive_browser/: __init__.py  artifacts.py  e2e_runner.py  element_extractor.py  form_filler.py  main.py  screenshot.py
workers/browser/src/hive_browser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/ci_agent/: pyproject.toml
workers/ci_agent/src/: main.py
workers/ci_agent/src/hive_ci_agent/: __init__.py  docker_utils.py  image_builder.py  main.py  shell_runner.py  test_runner.py
workers/ci_agent/src/hive_ci_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/discord/: pyproject.toml
workers/discord/src/: main.py
workers/discord/src/hive_discord/: __init__.py  channel_poster.py  client_pool.py  dm_sender.py  main.py  slash_listener.py
workers/discord/src/hive_discord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/mcp_host/: package.json
workers/mcp_host/src/: env.ts  hive-api.ts  index.ts
workers/monitor/: pyproject.toml
workers/monitor/src/: main.py
workers/monitor/src/hive_monitor/: __init__.py  heartbeat.py  http_check.py  main.py
workers/monitor/src/hive_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/monitor/tests/: test_http_check_ssrf.py
workers/rpa_desktop/: pyproject.toml
workers/rpa_desktop/src/: main.py
workers/rpa_desktop/src/hive_rpa_desktop/: __init__.py  artifacts.py  checks.py  macro_player.py  main.py  ocr_field.py  screen_capture.py
workers/rpa_desktop/src/hive_rpa_desktop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/scraper/: Dockerfile  pyproject.toml
workers/scraper/src/: main.py
workers/scraper/src/hive_scraper/: __init__.py  espn.py  main.py  sportsbook.py
workers/scraper/src/hive_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/scraper/src/hive_scraper/sportsbooks/: __init__.py  _shared.py  draftkings.py  fanduel.py
workers/task_runner/: pyproject.toml
workers/task_runner/src/: main.py
workers/task_runner/src/hive_task_runner/: __init__.py  main.py  native_shell.py  python_script.py  webhook_echo.py
workers/task_runner/src/hive_task_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/telegram/: pyproject.toml
workers/telegram/src/: main.py
workers/telegram/src/hive_telegram/: __init__.py  bot_pool.py  channel_poster.py  dm_alerter.py  main.py
workers/telegram/src/hive_telegram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/trading/: package.json
workers/trading/src/: audit.ts  env.ts  exchanges.ts  index.ts
(+95 files in other folders)
