[project]
name = "hive-base"
version = "0.1.0"
description = "Shared library for Hive Python workers"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "psycopg[binary,pool]>=3.2.0",
    "pynacl>=1.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
