[project]
name = "hive-browser"
version = "0.1.0"
description = "Headless browser automation (Playwright)"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
]

[project.scripts]
hive-browser = "hive_browser.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_browser*"]

[tool.setuptools.package-dir]
"" = "src"
