[project]
name = "hive-ci-agent"
version = "0.1.0"
description = "CI runners / build agents (Docker SDK)"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
    "docker>=7.1.0",
]

[project.scripts]
hive-ci-agent = "hive_ci_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_ci_agent*"]

[tool.setuptools.package-dir]
"" = "src"
