[project]
name = "hive-monitor"
version = "1.0.0"
description = "Uptime / health checks / heartbeat monitor pool"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
]

[project.scripts]
hive-monitor = "hive_monitor.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_monitor*"]

[tool.setuptools.package-dir]
"" = "src"
