[project]
name = "hive-rpa-desktop"
version = "1.0.0"
description = "Desktop automation (pyautogui, OCR via pytesseract)"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "httpx>=0.27.0",
]

[project.scripts]
hive-rpa-desktop = "hive_rpa_desktop.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_rpa_desktop*"]

[tool.setuptools.package-dir]
"" = "src"
