[project]
name = "hive-scraper"
version = "1.0.0"
description = "API/HTML scrapers (httpx, BeautifulSoup, Scrapy)"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
hive-scraper = "hive_scraper.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_scraper*"]

[tool.setuptools.package-dir]
"" = "src"
