[project]
name = "hive-task-runner"
version = "1.0.0"
description = "Generic distributed tasks — subprocess runner, NOT arq (pool name is historical)"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
    "aiohttp>=3.10.0",
]

[project.scripts]
hive-task-runner = "hive_task_runner.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_task_runner*"]

[tool.setuptools.package-dir]
"" = "src"
