[project]
name = "hive-telegram"
version = "0.1.0"
description = "Telegram bots (python-telegram-bot)"
requires-python = ">=3.11"
dependencies = [
    "hive-base",
    "python-telegram-bot>=21.4",
]

[project.scripts]
hive-telegram = "hive_telegram.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hive_telegram*"]

[tool.setuptools.package-dir]
"" = "src"
